k8s/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-development
  namespace: status-dashboard-development
  labels:
    app: status-dashboard-development
spec:
  ports:
  - port: 4000
    name: https
    targetPort: 3000
  selector:
    app: status-dashboard-development
